--- a/sites/site2/nginx.config
+++ b/sites/site2/nginx.config
@@ -2,15 +2,35 @@ server {
     listen 80;
     gzip on;
     gzip_types text/html text/css application/javascript image/jpeg;
+    
+    root /usr/share/nginx/html;
+    index index.html;
 
-    location / {
-        root /usr/share/nginx/html;
-        index index.html;
-        try_files $uri $uri/ = 404;
+    # Для HTML файлов - полное отключение кеширования
+    location ~* \.html$ {
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        add_header Pragma "no-cache";
+        add_header Expires "0";
+        try_files $uri $uri/ =404;
     }
-    location ~* \.(css|js|html)$ {
-            add_header Cache-Control "no-cache, no-store, must-revalidate";
-            add_header Pragma "no-cache";
-            add_header Expires "0";
+
+    # Для CSS и JS файлов - можно использовать хеши в именах файлов
+    location ~* \.(css|js)$ {
+        add_header Cache-Control "no-cache, must-revalidate";
+        try_files $uri $uri/ =404;
+    }
+
+    # Для изображений и шрифтов - более мягкое кеширование
+    location ~* \.(jpg|jpeg|png|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        add_header Cache-Control "public, max-age=3600"; # 1 час
+        try_files $uri $uri/ =404;
+    }
+
+    # Основная location для остальных файлов
+    location / {
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        add_header Pragma "no-cache";
+        add_header Expires "0";
+        try_files $uri $uri/ =404;
     }
 }
