--- a/reverse-proxy/nginx.conf
+++ b/reverse-proxy/nginx.conf
@@ -6,17 +6,43 @@ http {
     upstream site1 {
         server site1:80;
     }
+    upstream site2 {
+        server site2:80;
+    }
 
     upstream forms-data-handler {
         server forms-data-handler:3000;
     }
 
+    # Site1
     server {
-        listen 80;
+        listen 8001;
         server_name localhost;
 
         location / {
             proxy_pass http://site1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /api/ {
+            proxy_pass http://forms-data-handler/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+    }
+
+    # Site2
+    server {
+        listen 8002;
+        server_name localhost;
+
+        location / {
+            proxy_pass http://site2;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
