--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,9 @@ services:
       - "8002:8002"
     networks:
       - app-network
+    environment:
+      - SITE1_DOMAIN=${SITE1_DOMAIN}
+      - SITE2_DOMAIN=${SITE2_DOMAIN}
     depends_on:
       - site1
       - site2
@@ -27,10 +30,18 @@ services:
     networks:
       - app-network
 
+  # bot1:
+  #   build: ./bots/bot1
+  #   container_name: bot1
+  #   restart: unless-stopped
+  #   environment:
+  #     - BOT1_TOKEN=${BOT1_TOKEN}
+  #   networks:
+  #     - app-network
+
   forms-data-handler:
     build: ./forms-data-handler/
     restart: unless-stopped
-
     environment:
       - GOOGLE_POST_URL=${GOOGLE_POST_URL}
     networks:
