--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,13 @@ services:
     environment:
       - SITE1_DOMAIN=${SITE1_DOMAIN}
       - SITE2_DOMAIN=${SITE2_DOMAIN}
+    command: >
+      sh -c "
+        envsubst '$$SITE1_DOMAIN $$SITE2_DOMAIN' 
+          < /etc/nginx/templates/nginx.conf.template 
+          > /etc/nginx/nginx.conf &&
+        nginx -g 'daemon off;'
+      "
     depends_on:
       - site1
       - site2
