--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,22 @@ services:
     container_name: reverse-proxy
     restart: unless-stopped
     ports:
+      - "80:80"
+      - "443:443"
       - "8001:8001"
       - "8002:8002"
     networks:
       - app-network
+    environment:
+      - SITE1_DOMAIN=${SITE1_DOMAIN}
+      - SITE2_DOMAIN=${SITE2_DOMAIN}
+    command: >
+      sh -c "
+        envsubst '$$SITE1_DOMAIN $$SITE2_DOMAIN' 
+          < /etc/nginx/templates/nginx.conf.template 
+          > /etc/nginx/nginx.conf &&
+        nginx -g 'daemon off;'
+      "
     depends_on:
       - site1
       - site2
@@ -27,6 +39,15 @@ services:
     networks:
       - app-network
 
+  # bot1:
+  #   build: ./bots/bot1
+  #   container_name: bot1
+  #   restart: unless-stopped
+  #   environment:
+  #     - BOT1_TOKEN=${BOT1_TOKEN}
+  #   networks:
+  #     - app-network
+
   forms-data-handler:
     build: ./forms-data-handler/
     restart: unless-stopped
@@ -34,7 +55,6 @@ services:
       - GOOGLE_POST_URL=${GOOGLE_POST_URL}
     networks:
       - app-network
-
 networks:
   app-network:
     driver: bridge
