--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,9 @@ services:
     build: ./reverse-proxy
     container_name: reverse-proxy
     restart: unless-stopped
-    # ports:
-    #   - "8001:8001"
-    #   - "8002:8002"
+    ports:
+      - "127.0.0.1:8001:8001"
+      - "127.0.0.1:8002:8002"
     networks:
       - app-network
     environment:
