--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
   nginx-setup:
-    image: alpine
+    build:
+      conte
+      dockerfile: Dockerfile.nginx-setup
     container_name: nginx-setup-host
     volumes:
       - /etc/nginx:/etc/nginx
@@ -13,11 +15,7 @@ services:
       - SITE2_DOMAIN=${SITE2_DOMAIN}
       - PORT1=8001
       - PORT2=8002
-    command: >
-      sh -c "
-        chmod +x /scripts/setup-nginx-proxy.sh &&
-        /scripts/setup-nginx-proxy.sh
-      " 
+    command: /scripts/setup-nginx-proxy.sh
     restart: no
     network_mode: host
     privileged: true
