--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,11 @@ services:
       - SITE2_DOMAIN=${SITE2_DOMAIN}
       - PORT1=8001
       - PORT2=8002
-    # command: /scripts/setup-nginx-proxy.sh
+    command: > 
+      sh -c "
+        chmod +x /scripts/setup-nginx-proxy.sh &&
+        /scripts/setup-nginx-proxy.sh
+      "
     restart: no
     network_mode: host
     privileged: true
