--- a/nginx-setup-host/Dockerfile
+++ b/nginx-setup-host/Dockerfile
@@ -6,8 +6,8 @@ RUN mkdir -p /scripts
 # Копируем скрипт в образ
 COPY setup-nginx-proxy.sh /scripts/setup-nginx-proxy.sh
 
-# Даем права на выполнение
-RUN chmod +x /scripts/setup-nginx-proxy.sh
+# # Даем права на выполнение
+# RUN chmod +x /scripts/setup-nginx-proxy.sh
 
-# Устанавливаем bash для лучшей совместимости скриптов
-RUN apk add --no-cache bash nginx
+# # Устанавливаем bash для лучшей совместимости скриптов
+# RUN apk add --no-cache bash nginx
