--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,6 @@ services:
     volumes:
       - /etc/nginx:/etc/nginx
       - /var/log/nginx:/var/log/nginx
-      - /run/systemd/system:/run/systemd/system:rw
-      - /usr/sbin/nginx:/usr/sbin/nginx:ro
       - ./scripts:/scripts
     environment:
       - SITE1_DOMAIN=${SITE1_DOMAIN}
@@ -15,8 +13,8 @@ services:
       - PORT2=8002
     command: > 
       sh -c "
-        chmod +x /scripts/setup-nginx-proxy.sh &&
-        /scripts/setup-nginx-proxy.sh
+        mkdir -p /scripts &&
+        cat /scripts/setup-nginx-proxy.sh
       "
     restart: no
     network_mode: host
