--- a/nginx-setup-host/Dockerfile
+++ b/nginx-setup-host/Dockerfile
@@ -1,13 +1,10 @@
-FROM alpine
+FROM nginx
 
 # Создаем директорию для скриптов
-RUN mkdir -p /scripts
+RUN mkdir /scripts
 
 # Копируем скрипт в образ
-COPY setup-nginx-proxy.sh /scripts/setup-nginx-proxy.sh
+COPY scripts/setup-nginx-proxy.sh /scripts
 
-# # Даем права на выполнение
-# RUN chmod +x /scripts/setup-nginx-proxy.sh
-
-# # Устанавливаем bash для лучшей совместимости скриптов
-# RUN apk add --no-cache bash nginx
+# Даем права на выполнение
+RUN chmod +x /scripts/setup-nginx-proxy.sh
