--- a/nginx-setup-host/Dockerfile
+++ b/nginx-setup-host/Dockerfile
@@ -1,4 +1,4 @@
-FROM nginx
+FROM alpine
 
 # Создаем директорию для скриптов
 RUN mkdir /scripts
@@ -8,3 +8,6 @@ COPY scripts/setup-nginx-proxy.sh /scripts
 
 # Даем права на выполнение
 RUN chmod +x /scripts/setup-nginx-proxy.sh
+
+# Устанавливаем bash для лучшей совместимости скриптов
+RUN apk add --no-cache bash nginx
