--- a/nginx-setup-host/Dockerfile
+++ b/nginx-setup-host/Dockerfile
@@ -1,13 +1,13 @@
 FROM alpine
 
+# Устанавливаем зависимости
+RUN apk add --no-cache bash nginx
+
 # Создаем директорию для скриптов
-RUN mkdir /scripts
+RUN mkdir -p /scripts
 
 # Копируем скрипт в образ
-COPY scripts/setup-nginx-proxy.sh /scripts
+COPY scripts/setup-nginx-proxy.sh /scripts/
 
 # Даем права на выполнение
 RUN chmod +x /scripts/setup-nginx-proxy.sh
-
-# Устанавливаем bash для лучшей совместимости скриптов
-RUN apk add --no-cache bash nginx
