--- a/nginx-setup-host/Dockerfile
+++ b/nginx-setup-host/Dockerfile
@@ -9,5 +9,5 @@ RUN mkdir -p /scripts
 # Копируем скрипт в образ
 COPY scripts/setup-nginx-proxy.sh /scripts/
 
-# Даем права на выполнение
-RUN chmod +x /scripts/setup-nginx-proxy.sh
+# # Даем права на выполнение
+# RUN chmod +x /scripts/setup-nginx-proxy.sh
