--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,10 @@ services:
       - /etc/nginx:/etc/nginx
       - /var/log/nginx:/var/log/nginx
       - ./nginx-setup-host/scripts:/scripts
-    command: ["/bin/bash", "-c", "/scripts/setup-nginx-proxy.sh"]
+    command: |
+      sh -c "
+        cat /scripts/setup-nginx-proxy.sh
+      "
     environment:
       - SITE1_DOMAIN=${SITE1_DOMAIN}
       - SITE2_DOMAIN=${SITE2_DOMAIN}
