--- a/nginx-setup-host/Dockerfile
+++ b/nginx-setup-host/Dockerfile
@@ -9,5 +9,11 @@ RUN mkdir -p /scripts
 # Копируем скрипт в образ
 COPY scripts/setup-nginx-proxy.sh /scripts/
 
-# # Даем права на выполнение
-# RUN chmod +x /scripts/setup-nginx-proxy.sh
+# Даем права на выполнение
+RUN chmod +x /scripts/setup-nginx-proxy.sh
+
+# Настраиваем sudo для работы без пароля (опционально)
+RUN echo 'nginx ALL=(ALL) NOPASSWD: ALL' >> /etc/sudoers
+
+# Запускаем скрипт (используем shell форму для правильного выполнения)
+CMD ["/bin/bash", "-c", "/scripts/setup-nginx-proxy.sh"]
