--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   nginx-setup:
-    profile: first-setup
+    profiles: ["first-setup"]
     build: 
       context: ./nginx-setup-host
       dockerfile: Dockerfile
@@ -20,7 +20,7 @@ services:
     privileged: true
 
   reverse-proxy:
-    profile: prod
+    profiles: ["prod"]
     build: ./reverse-proxy
     container_name: reverse-proxy
     restart: unless-stopped
@@ -38,7 +38,7 @@ services:
       - forms-data-handler
 
   site1:
-    profile: prod
+    profiles: ["prod"]
     build: ./sites/site1
     container_name: site1
     restart: unless-stopped
@@ -46,7 +46,7 @@ services:
       - app-network
 
   site2:
-    profile: prod
+    profiles: ["prod"]
     build: ./sites/site2
     container_name: site2
     restart: unless-stopped
@@ -63,7 +63,7 @@ services:
   #     - app-network
 
   forms-data-handler:
-    profile: prod
+    profiles: ["prod"]
     build: ./forms-data-handler/
     restart: unless-stopped
     environment:
