--- a/nginx-setup-host/Dockerfile
+++ b/nginx-setup-host/Dockerfile
@@ -1,6 +1,7 @@
 FROM nginx:latest
 
 # Устанавливаем зависимости
+RUN apk add --no-cache bash nginx certbot certbot-nginx
 
 RUN apt-get update && apt-get install -y \
     certbot \
@@ -23,4 +24,4 @@ RUN chmod +x /scripts/setup-nginx-proxy.sh /scripts/setup-nginx-ssl.sh
 RUN echo 'nginx ALL=(ALL) NOPASSWD: ALL' >> /etc/sudoers
 
 # Запускаем скрипт (используем shell форму для правильного выполнения)
-CMD ["/bin/bash", "-c", "/scripts/setup-nginx-proxy.sh && /scripts/setup-nginx-ssl.sh"]
+CMD ["/bin/bash", "-c", "/scripts/setup-nginx-proxy.sh"]
